updated index content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,5 +12,7 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
+		<h2>SUB</h2>
+		<p>This is a sample of building and deploying an Astro app.</p>
 	</body>
 </html>
