--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,6 @@
 	<body>
 		<h1>Astro</h1>
 		<h2>SUB</h2>
-		<p>This is a sample of building and deploying an Astro app.</p>
+		<p>This is a sample of building and deploying an Astro app. Here's another change.</p>
 	</body>
 </html>
