--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
-		<h2>SUB</h2>
+		<h2>DEV</h2>
 		<p>This is a sample of building and deploying an Astro app. Here's another change.</p>
 	</body>
 </html>
